# pds-ground-station

./: .gitignore  CMakeLists.txt  ReadMe.md  compile.sh
config/: config.cfg.TEMPLATE
notes/: notes_1.txt  notes_2.txt
src/: Constants.h  Main.cpp
src/android/converter/: Abstract_AndroidMessageConverter.h  Json_AndroidMessageConverter.cpp  Json_AndroidMessageConverter.h  Json_ReceivedMessagesConverter.cpp  Json_ReceivedMessagesConverter.h  Json_ToSendMessagesConverter.cpp  Json_ToSendMessagesConverter.h
src/android/message/: Abstract_AndroidMessage.h
src/android/message/received/: Abstract_AndroidReceivedMessage.h  Ack_MessageReceived.h  DroneInfos_MessageReceived.h  Manual_MessageReceived.h  Record_MessageReceived.h  Start_MessageReceived.h
src/android/message/tosend/: Abstract_AndroidToSendMessage.h  Abstract_Answer_MessageToSend.h  Ack_MessageToSend.h  DroneInfos_MessageToSend.h  Record_MessageToSend.h
src/android/network/: AndroidMediator.cpp  AndroidMediator.h
src/application/converter/: Abstract_ApplicationMessageConverter.h  Json_ApplicationMessageConverter.cpp  Json_ApplicationMessageConverter.h  Json_ReceivedMessagesConverter.cpp  Json_ReceivedMessagesConverter.h  Json_ToSendMessagesConverter.cpp  Json_ToSendMessagesConverter.h
src/application/message/: Abstract_ApplicationMessage.h  MessageType.h
src/application/message/received/: Abstract_ApplicationReceivedMessage.h  Ack_MessageReceived.h  AutopilotInfos_MessageReceived.h  DroneInfos_MessageReceived.h  Manual_MessageReceived.h  PathLaunch_MessageReceived.h  PathList_MessageReceived.h  PathOne_MessageReceived.h  Record_MessageReceived.h  RegainControl_MessageReceived.h  ResumeAutopilot_MessageReceived.h  Start_MessageReceived.h  recevied_headers.h
src/application/message/tosend/: Abstract_Answer_MessageToSend.h  Abstract_ApplicationToSendMessage.h  Ack_MessageToSend.h  AutopilotInfos_MessageToSend.h  DroneInfos_MessageToSend.h  PathLaunch_MessageToSend.h  PathList_MessageToSend.h  PathOne_MessageToSend.h  Record_MessageToSend.h  RegainControl_MessageToSend.h  ResumeAutopilot_MessageToSend.h  toSend_headers.h  (+1 more)
src/application/network/: ApplicationMediator.cpp  ApplicationMediator.h
src/arkins/: Arkins.cpp  Arkins.h  Coordinates.h  Informations.cpp  Informations.h  Vector.cpp  Vector.h
src/channels/: channels.cpp  channels.h
src/config/: ConfigParams.h  ConfigParser.cpp  ConfigParser.h
src/drone/: DroneCommunicator.cpp  DroneCommunicator.h
src/ground_station/: GroundStation.cpp  GroundStation.h
src/mediator/: MediatorChannel.cpp  MediatorChannel.h  MediatorMainCommunicator.cpp  MediatorMainCommunicator.h  MediatorSecondaryCommunicator.cpp  MediatorSecondaryCommunicator.h
src/mediator/converter/: MediatorResponseConverter.cpp  MediatorResponseConverter.h
src/mediator/messages/: Abstract_MediatorMessage.h  MediatorMessageType.h
src/network/: HostUdpSocket.cpp  HostUdpSocket.h  ReplierUDPSocket.cpp  ReplierUDPSocket.h  TCPSocket.h  UDPSocket.cpp
src/threads/: Abstract_ThreadClass.cpp  Abstract_ThreadClass.h  Autopilot_ThreadClass.cpp  Autopilot_ThreadClass.h  RegisterPath_ThreadClass.cpp  RegisterPath_ThreadClass.h
src/threads/bridges/: PathRecorderHandler.cpp  PathRecorderHandler.h  ToAppMessagesHolder.cpp  ToAppMessagesHolder.h  ToDroneMessagesHolder.cpp  ToDroneMessagesHolder.h  note.txt
src/util/: base_64.cpp  base_64.h  coordinates_utils.cpp  coordinates_utils.h  coordinates_utils.hpp  memory_utils.hpp  numconvert_utils.cpp  numconvert_utils.h  numconvert_utils.hpp
(+22 files in other folders)
